--- a/src/CodeGenerator/CodeGenerator.csproj
+++ b/src/CodeGenerator/CodeGenerator.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <Content Include="definitions\cimgui\structs_and_enums.json" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="definitions\cimgui\definitions.json" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="definitions\cimgui\variants.json" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="definitions\cimgui\impl_definitions.json" CopyToOutputDirectory="PreserveNewest" />
 
     <Content Include="definitions\cimplot\structs_and_enums.json" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="definitions\cimplot\definitions.json" CopyToOutputDirectory="PreserveNewest" />
